--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@nickgraffis/eslint",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "🧹 My eslint settings.",
   "main": "index.js",
+  "bin": "init.js",
   "scripts": {
     "lint": "eslint . --config=index.js"
   },
