--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "bin": "init.js",
   "scripts": {
-    "lint": "eslint \"**/*.{vue,ts,js}\""
+    "release": "git-ensure --no-behind -b main --clean && bumpp --commit --tag --push"
   },
   "repository": {
     "type": "git",
@@ -15,6 +15,7 @@
     "eslint": ">=7.4.0"
   },
   "dependencies": {
+    "bumpp": "^7.1.1",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^6.2.0",
