--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-unicorn": "^39.0.0",
     "eslint-plugin-yml": "^0.12.0",
+    "git-ensure": "^0.1.0",
     "jsonc-eslint-parser": "^2.0.4",
     "yaml-eslint-parser": "^0.5.0"
   },
