--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -20,7 +20,8 @@
     "access": "public"
   },
   "dependencies": {
-    "eslint-plugin-react": "^7.28.0"
+    "eslint-plugin-react": "^7.28.0",
+    "@nickgraffis/eslint-typescript": "file:packages/typescript"
   },
   "devDependencies": {
     "eslint": "^8.5.0",
