--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1"
+    "@typescript-eslint/parser": "^5.8.1",
+    "@nickgraffis/eslint-basic": "file:packages/basic"
   },
   "devDependencies": {
     "eslint": "^8.5.0"
