--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,14 @@ jobs:
         with:
           node-version: '14'
           registry-url: https://registry.npmjs.org/
+      - name: Get changed files using defaults
+        id: changed-files
+        uses: tj-actions/changed-files@v13
+      - name: List all added files
+        run: |
+          for file in ${{ steps.changed-files.outputs.modified_files }}; do
+            echo "$file was added"
+          done
       - name: basic
         if: contains(github.ref, 'refs/tags/basic')
         run: cd packages/basic
