--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "eslint-plugin-vue": "^8.2.0",
-    "@nickgraffis/eslint-typescript": "file:packages/typescript"
+    "@nickgraffis/eslint-ts": "file:../typescript"
   },
   "devDependencies": {
     "eslint": "^8.5.0"
