--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@nickgraffis/eslint",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "🧹 My eslint settings.",
   "main": "index.js",
-  "bin": "init.js",
+  "bin": "index.js",
   "workspaces": [
     "packages/basic",
     "packages/react",
